Dispatch - Assets - Fixed css so back button is not hidden by header. Created css format for assigned page

--- a/scct/web/css/dispatch.css
+++ b/scct/web/css/dispatch.css
@@ -1,5 +1,5 @@
-.dispatch-dispatch{
-	margin-top:6vh;
+.dispatch-dispatch,.dispatch-assigned,.dispatch-assets{
+	margin-top:60px;
 }
 #dispatchGV{
 	width:60%;
@@ -8,4 +8,11 @@
 #surveyorsGV{
 	width:38%;
 	float:right;
+}
+#assignedGV{
+	width:100%;
+	float:left;
+}
+#dispatchAssetsBackButton{
+	margin-bottom:5px;
 }
